@@ -1,3 +1,5 @@
+# -*- tcl -*-
+
 # itk.decls --
 #
 #	This file contains the declarations for all supported public
@@ -23,10 +25,10 @@ scspec ITKAPI
 #  Exported functions:
 #
 
-declare 0 current {
+declare 0 {
     int Itk_Init (Tcl_Interp *interp)
 }
-declare 1 current {
+declare 1 {
     int Itk_SafeInit (Tcl_Interp *interp)
 }
 
@@ -35,7 +37,7 @@ declare 1 current {
 #  Functions needed for the Archetype base class:
 #
 
-declare 13 current {
+declare 13 {
     int Itk_ArchetypeInit (Tcl_Interp* interp)
 }
 
@@ -52,11 +54,11 @@ interface itkInt
 #  Functions used internally by this package:
 #
 
-declare 2 current {
+declare 2 {
     int Itk_ConfigBodyCmd (ClientData cdata, Tcl_Interp *interp, \
         int objc, Tcl_Obj *CONST objv[])
 }
-declare 3 current {
+declare 3 {
     int Itk_UsualCmd (ClientData cdata, Tcl_Interp *interp, int objc, \
         Tcl_Obj *CONST objv[])
 }
@@ -65,37 +67,37 @@ declare 3 current {
 #  Functions for managing options included in class definitions:
 #
 
-declare 4 current {
+declare 4 {
     int Itk_ClassOptionDefineCmd (ClientData cdata, Tcl_Interp *interp, \
         int objc, Tcl_Obj *CONST objv[])
 }
-declare 5 current {
+declare 5 {
     int Itk_ClassOptionIllegalCmd (ClientData cdata, Tcl_Interp *interp, \
         int objc, Tcl_Obj *CONST objv[])
 }
-declare 6 current {
+declare 6 {
     int Itk_ConfigClassOption (Tcl_Interp *interp, ItclObject *contextObj, \
         ClientData cdata, CONST char* newVal)
 }
-declare 7 current {
+declare 7 {
     ItkClassOptTable* Itk_CreateClassOptTable( Tcl_Interp *interp, \
         ItclClass *cdefn)
 }
-declare 8 current {
+declare 8 {
     ItkClassOptTable* Itk_FindClassOptTable (ItclClass *cdefn)
 }
-#declare 9 current {
+#declare 9 {
 #    void Itk_DeleteClassOptTable (Tcl_Interp *interp, ItclClass *cdefn)
 #}
-declare 10 current {
+declare 10 {
     int Itk_CreateClassOption (Tcl_Interp *interp, ItclClass *cdefn, \
         char *switchName, char *resName, char *resClass, char *defVal, \
         char *config, ItkClassOption **optPtr)
 }
-declare 11 current {
-    ItkClassOption* Itk_FindClassOption (ItclClass *cdefn, char *switchName)
+declare 11 {
+    ItkClassOption* Itk_FindClassOption (ItclClass *cdefn, const char *switchName)
 }
-declare 12 current {
+declare 12 {
     void Itk_DelClassOption (ItkClassOption *opt)
 }
 
@@ -103,16 +105,16 @@ declare 12 current {
 #  Functions for maintaining the ordered option list:
 #
 
-declare 14 current {
+declare 14 {
     void Itk_OptListInit (ItkOptList* olist, Tcl_HashTable *options)
 }
-declare 15 current {
+declare 15 {
     void Itk_OptListFree (ItkOptList* olist)
 }
-declare 16 current {
+declare 16 {
     void Itk_OptListAdd (ItkOptList* olist, Tcl_HashEntry *entry)
 }
-declare 17 current {
+declare 17 {
     void Itk_OptListRemove (ItkOptList* olist, Tcl_HashEntry *entry)
 }
 
