@@ -4,16 +4,14 @@
 #define ITK_STUBS_EPOCH 0
 #define ITK_STUBS_REVISION 17
 
-#if !defined(USE_ITK_STUBS)
-
 /*
  * Exported function declarations:
  */
 
 /* 0 */
-ITKAPI int		Itk_Init (Tcl_Interp * interp);
+ITKAPI int		Itk_Init(Tcl_Interp *interp);
 /* 1 */
-ITKAPI int		Itk_SafeInit (Tcl_Interp * interp);
+ITKAPI int		Itk_SafeInit(Tcl_Interp *interp);
 /* Slot 2 is reserved */
 /* Slot 3 is reserved */
 /* Slot 4 is reserved */
@@ -26,22 +24,20 @@ ITKAPI int		Itk_SafeInit (Tcl_Interp * interp);
 /* Slot 11 is reserved */
 /* Slot 12 is reserved */
 /* 13 */
-ITKAPI int		Itk_ArchetypeInit (Tcl_Interp* interp);
-
-#endif /* !defined(USE_ITK_STUBS) */
+ITKAPI int		Itk_ArchetypeInit(Tcl_Interp*interp);
 
 typedef struct ItkStubHooks {
-    struct ItkIntStubs *itkIntStubs;
+    const struct ItkIntStubs *itkIntStubs;
 } ItkStubHooks;
 
 typedef struct ItkStubs {
     int magic;
     int epoch;
     int revision;
-    struct ItkStubHooks *hooks;
+    const struct ItkStubHooks *hooks;
 
-    int (*itk_Init) (Tcl_Interp * interp); /* 0 */
-    int (*itk_SafeInit) (Tcl_Interp * interp); /* 1 */
+    int (*itk_Init) (Tcl_Interp *interp); /* 0 */
+    int (*itk_SafeInit) (Tcl_Interp *interp); /* 1 */
     void (*reserved2)(void);
     void (*reserved3)(void);
     void (*reserved4)(void);
@@ -53,7 +49,7 @@ typedef struct ItkStubs {
     void (*reserved10)(void);
     void (*reserved11)(void);
     void (*reserved12)(void);
-    int (*itk_ArchetypeInit) (Tcl_Interp* interp); /* 13 */
+    int (*itk_ArchetypeInit) (Tcl_Interp*interp); /* 13 */
 } ItkStubs;
 
 #ifdef __cplusplus
@@ -70,14 +66,10 @@ extern const ItkStubs *itkStubsPtr;
  * Inline function declarations:
  */
 
-#ifndef Itk_Init
 #define Itk_Init \
 	(itkStubsPtr->itk_Init) /* 0 */
-#endif
-#ifndef Itk_SafeInit
 #define Itk_SafeInit \
 	(itkStubsPtr->itk_SafeInit) /* 1 */
-#endif
 /* Slot 2 is reserved */
 /* Slot 3 is reserved */
 /* Slot 4 is reserved */
@@ -89,10 +81,8 @@ extern const ItkStubs *itkStubsPtr;
 /* Slot 10 is reserved */
 /* Slot 11 is reserved */
 /* Slot 12 is reserved */
-#ifndef Itk_ArchetypeInit
 #define Itk_ArchetypeInit \
 	(itkStubsPtr->itk_ArchetypeInit) /* 13 */
-#endif
 
 #endif /* defined(USE_ITK_STUBS) */
 
